<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="webersolutions.noassemblyrequired.pergolatools"
    android:background="@drawable/tools">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pergolaToolTitle"
        android:id="@+id/pergolaToolTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/material_blue_grey_950"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pergolaImg"
        android:src="@drawable/pergola"
        android:layout_below="@+id/pergolaToolTitle"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tool2"
        android:id="@+id/pergToolTxt"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:layout_below="@+id/pergolaImg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20sp"
        android:textColor="@color/material_grey_900" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tool3"
        android:id="@+id/PergToolTxt"
        android:layout_below="@+id/pergToolTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/material_grey_900" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tool4"
        android:id="@+id/pergToolTxt3"
        android:layout_below="@+id/PergToolTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/material_grey_900" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tool5"
        android:id="@+id/pergToolTxt4"
        android:layout_below="@+id/pergToolTxt3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/material_grey_900" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tool6"
        android:id="@+id/pergToolTxt5"
        android:layout_below="@+id/pergToolTxt4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/material_grey_900" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tool7"
        android:id="@+id/pergToolTxt6"
        android:layout_below="@+id/pergToolTxt5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/material_grey_900" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tool10"
        android:id="@+id/pergToolTxt7"
        android:layout_below="@+id/pergToolTxt6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/material_grey_900" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tool11"
        android:id="@+id/pergToolTxt8"
        android:layout_below="@+id/pergToolTxt7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/material_grey_900" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tool8"
        android:id="@+id/pergToolTxt9"
        android:layout_below="@+id/pergToolTxt8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/material_grey_900" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tool9"
        android:id="@+id/pergToolTxt10"
        android:layout_below="@+id/pergToolTxt9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/material_grey_900" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tool0"
        android:id="@+id/pergToolTxt11"
        android:layout_below="@+id/pergToolTxt10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:typeface="serif" />
</RelativeLayout>
